<resources>
    <string name="app_name">Task Manager</string>
    <string name="add_task_fab_content_description">Adicionar nova tarefa</string>
    <string name="tab_item_today_tasks_text">Tarefas de hoje</string>
    <string name="tab_item_tasks_text">Tarefas</string>
    <string name="top_app_bar_title">Gerenciador de tarefas</string>
    <string name="diary_task_title_placeholder">Título da tarefa</string>
    <string name="diary_task_description_placeholder">Descrição da tarefa</string>
    <string name="diary_task_details_button_label">Detalhes</string>
    <string name="add_task_menu_item_title">Adicionar tarefa</string>
    <string name="top_app_bar_create_task_title">Criar tarefa</string>
    <string name="create_task_title_label">Título</string>
    <string name="create_task_description_label">Descrição</string>
    <string name="create_task_button_label">Criar tarefa</string>
    <string name="create_task_days_label">Dias</string>
    <string name="create_task_sunday_checkbox_label">Domingo</string>
    <string name="create_task_monday_checkbox_label">Segunda-feira</string>
    <string name="create_task_tuesday_checkbox_label">Terça-feira</string>
    <string name="create_task_wednesday_checkbox_label">Quarta-feira</string>
    <string name="create_task_thursday_checkbox_label">Quinta-feira</string>
    <string name="create_task_friday_checkbox_label">Sexta-feira</string>
    <string name="create_task_saturday_checkbox_label">Sábado</string>
</resources>