<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/createTaskTopAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/createTaskTopAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/top_app_bar_create_task_title"
            app:titleTextColor="@color/white"
            android:backgroundTint="?attr/colorPrimary"
            style="@style/Widget.Material3.Toolbar.Surface"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:navigationIconTint="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createTaskTopAppBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/create_task_title_label"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/create_task_description_label"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:minLines="5"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/createTaskDaysLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task_days_label"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"/>

    <CheckBox
        android:id="@+id/createTaskSundayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createTaskDaysLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_task_sunday_checkbox_label"/>

    <CheckBox
        android:id="@+id/createTaskMondayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createTaskSundayCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_task_monday_checkbox_label"/>

    <CheckBox
        android:id="@+id/createTaskTuesdayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createTaskMondayCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_task_tuesday_checkbox_label"/>

    <CheckBox
        android:id="@+id/createTaskWednesdayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createTaskTuesdayCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_task_wednesday_checkbox_label"/>

    <CheckBox
        android:id="@+id/createTaskThursdayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createTaskWednesdayCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_task_thursday_checkbox_label"/>

    <CheckBox
        android:id="@+id/createTaskFridayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createTaskThursdayCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_task_friday_checkbox_label"/>

    <CheckBox
        android:id="@+id/createTaskSaturdayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createTaskFridayCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_task_saturday_checkbox_label"/>

    <Button
        android:id="@+id/createTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create_task_button_label"
        android:layout_marginHorizontal="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>