<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/diaryTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_task_title_placeholder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/diaryTaskTitle"
            app:layout_constraintBottom_toBottomOf="@id/diaryTaskTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="0dp"/>

        <TextView
            android:id="@+id/diaryTaskDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_task_description_placeholder"
            app:layout_constraintTop_toBottomOf="@id/diaryTaskTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/diaryTaskDescription"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            app:icon="@drawable/ic_arrow_forward_ios"
            android:text="@string/diary_task_details_button_label"
            app:iconGravity="textEnd" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
